fix: drop the grid + negative-margin hack on skills (tablet/desktop)
The original layout used display: grid with margin-top: -4rem on the
title and margin-top: -10rem on the list to fake an overlap inside a
fixed-height card. With auto height and a longer list, those negatives
pushed content out of the card. Falling back to plain flex column with
horizontal padding gives the same visual without the hack.

--- a/src/scss/layout/_skills.scss
+++ b/src/scss/layout/_skills.scss
@@ -14,29 +14,23 @@
   margin-bottom: 2rem;
   padding-bottom: 2rem;
   @include tablet {
-    display: grid;
-    grid-template-areas: 'a a a' 'b b b';
     width: 90%;
   }
   &_title {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    @include tablet {
-      grid-area: a;
-      margin-top: -4rem;
-    }
   }
   &_container {
     width: 250px;
     @include tablet {
       width: 90%;
-      grid-area: b;
       text-align: start;
-      margin-top: -10rem;
-      margin-left: 2rem;
+      padding-left: 2rem;
+      padding-right: 2rem;
     }
     @include desktop {
-      margin-left: 6rem;
+      padding-left: 6rem;
+      padding-right: 6rem;
     }
   }
   &_text {
